<resources>
    <string name="app_name">nCrypt</string>
    <string name="passwordTitle">Title</string>
    <string name="password">Password</string>
    <string name="generatePassword">Generate a password</string>
    <string name="useLowerCase">Use lowercase letters</string>
    <string name="useUpperCase">Use uppercase letters</string>
    <string name="useNumbers">Use numbers</string>
    <string name="useSimpleChars">Use simple characters</string>
    <string name="useComplexChars">Use complex characters</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="loginError">Wrong email or password</string>
</resources>
